Fix spacing on singles and add space on author archive

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -26,7 +26,11 @@
         }
 
         .wp-block-media-text {
-            @apply flex max-w-screen-sm mx-8 mx-auto align-middle;
+            @apply flex max-w-screen-sm mb-8 mx-auto align-middle;
+        }
+
+        .wp-block-image, .wp-block-embed  {
+            @apply mb-8;
         }
 
         .image-player {
